Fixes #13 - Invisible border on remote streamers when not speaking
It makes remote streamers' videos look smaller.

--- a/frontend/src/app/video-room/video-room.component.css
+++ b/frontend/src/app/video-room/video-room.component.css
@@ -274,7 +274,6 @@
   position: relative;
   min-width: 48px;
   min-height: 48px;
-  box-sizing: border-box;
 }
 
 .OT_publisher .OT_video-element,
@@ -287,6 +286,12 @@
   -webkit-transform-origin: 0 0;
 
   transform-origin: 0 0;
+}
+
+.OT_publisher#remoteStreamers:not(.OT_speaking) {
+  border-color: rgba(0,0,0,0);
+  border-width: thick;
+  border-style: solid;
 }
 
 .OT_publisher.OT_speaking {
